# Djinn

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
djinn/: __init__.py  config.yaml  main.py
djinn/brain/: __init__.py  gemini.py  local_llm.py
djinn/core/: __init__.py  orchestrator.py  router.py  voice_input.py  voice_output.py
djinn/memory/: __init__.py  longterm.py  working.py
djinn/tools/: __init__.py  apps.py  code.py  files.py  registry.py  web.py
djinn/ui/: __init__.py  chat_window.py  overlay.py  tray.py
scripts/: audition_voices.py
