[project]
name = "djinn"
version = "0.1.0"
description = "Djinn — Personal AI Voice Assistant"
requires-python = ">=3.11"

dependencies = [
    # Core voice pipeline
    "faster-whisper>=1.1.0",
    "silero-vad>=5.1",
    "kokoro-onnx>=0.4.0",
    "onnxruntime>=1.17.0",
    "edge-tts>=6.1.0",
    "sounddevice>=0.5.0",
    "soundfile>=0.12.0",
    "numpy>=2.0.2",
    # Brain
    # Memory & Config
    "pyyaml>=6.0",
    "peewee>=3.17.0",
    "python-dotenv>=1.0.1",
    # System
    "keyboard>=0.13.5",
    "google-genai>=2.11.0",
]

[project.scripts]
djinn = "djinn.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
